--- a/m4d/Views/Dance/emptydance.cshtml
+++ b/m4d/Views/Dance/emptydance.cshtml
@@ -27,7 +27,7 @@
     In the case of @Model.DanceName, we haven't even added any songs to your catalog. If you are interesteded in helping
     by either providing a good description of @Model.DanceName that we can use on the site or a list of songs that
     are greate examples of music for dancing @Model.DanceName, please contact us using our
-    <a href="https://www.music4dance.net/blog/feedback/">feedback page</a>.
+    <a href="https://music4dance.blog/feedback/">feedback page</a>.
 </p>
 
 @if (User.IsInRole("showDiagnostics"))
