--- a/m4d/Views/Home/PrivacyPolicy.cshtml
+++ b/m4d/Views/Home/PrivacyPolicy.cshtml
@@ -78,4 +78,4 @@
 
 <p>More information on how Google uses cookies to manage ads is available <a href="https://policies.google.com/technologies/ads">here</a>.</p>
 <p>If you would like more information about what cookies are and how to disable them <a href="https://cookiesandyou.com/">this website</a> is an excellent reference.</p>
-<p>If you have any questions please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a>.</p>
+<p>If you have any questions please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://music4dance.blog/feedback/">feedback form</a>.</p>
