--- a/m4d/Views/Shared/HttpError.cshtml
+++ b/m4d/Views/Shared/HttpError.cshtml
@@ -33,12 +33,12 @@
     <ul>
         <li class="big-text">Try our <a href="https://www.music4dance.net/dances">dances page</a> if you're looking for information about a particular dance style.</li>
         <li class="big-text">Try our <a href="https://www.music4dance.net/song">songs page</a> if you're looking for dance information about a particular song or artist.</li>
-        <li class="big-text">Try our <a href="https://www.music4dance.net/blog">blog</a> if you're looking for information about relating music to dance.</li>
+        <li class="big-text">Try our <a href="https://music4dance.blog">blog</a> if you're looking for information about relating music to dance.</li>
         <li class="big-text">Try our <a href="https://www.music4dance.net/home/sitemap">site map</a> or our <a href="https://www.music4dance.net/home">home page</a> if you want to see what we have to offer.</li>
-        <li class="big-text">If all else fails please Contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a> and let us know what went wrong.</li>
+        <li class="big-text">If all else fails please Contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://music4dance.blog/feedback/">feedback form</a> and let us know what went wrong.</li>
     </ul>
     <h3>Would you like a reward for finding a bug?</h3>
-    <p>We have established a bug bounty.  If you've found a bug and would like a reward, please see <a href="https://www.music4dance.net/blog/bug-report/">here</a> for details.</p>
+    <p>We have established a bug bounty.  If you've found a bug and would like a reward, please see <a href="https://music4dance.blog/bug-report/">here</a> for details.</p>
 </div>
 
 
