--- a/m4d/Views/Shared/_Counter.cshtml
+++ b/m4d/Views/Shared/_Counter.cshtml
@@ -6,7 +6,7 @@
     <div class="btn-group col-xs-6">
         @Html.Partial("_MeterChooser")
     </div>
-    <a class="btn btn-info col-xs-1" href="https://www.music4dance.net/blog/music4dance-help/tempo-counter"><span class="glyphicon glyphicon-question-sign"></span></a>
+    <a class="btn btn-info col-xs-1" href="https://music4dance.blog/music4dance-help/tempo-counter"><span class="glyphicon glyphicon-question-sign"></span></a>
 </div>
 
 @*
