--- a/m4d/Views/Shared/_dancemodal.cshtml
+++ b/m4d/Views/Shared/_dancemodal.cshtml
@@ -17,7 +17,7 @@
                     <!-- ko if:url -->
                     <a class="list-group-item list-group-item-warning" data-bind="attr:{href:url}"><span class="glyphicon glyphicon-globe"></span> List all <span class="filter-dance" data-bind="text:danceName"></span> songs.</a>
                     <!-- /ko -->
-                    <a class="list-group-item list-group-item-info" href="https://www.music4dance.net/blog/tag-filtering"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
+                    <a class="list-group-item list-group-item-info" href="https://music4dance.blog/tag-filtering"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
                 </div>
                 <div data-bind="if:tagText"><span data-bind="html:tagText"></span></div>
                 <div style="margin-top: 10px">
