--- a/m4d/Views/Shared/_filtermodal.cshtml
+++ b/m4d/Views/Shared/_filtermodal.cshtml
@@ -26,7 +26,7 @@
                         <a class="list-group-item list-group-item-success" data-bind="attr:{href:url().replace('{0}','%2B')}"><span class="glyphicon glyphicon-list"></span> List all songs tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
                         <a class="list-group-item list-group-item-danger" data-bind="attr:{href:url().replace('{0}','%2D')}"><span class="glyphicon glyphicon-list"></span> List all songs <span class="filter-negate">not</span> tagged as <span class="filter-tag" data-bind="text:tagValue"></span></a>
                     <!-- /ko -->
-                        <a class="list-group-item list-group-item-info" href="https://www.music4dance.net/blog/tag-filtering"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
+                        <a class="list-group-item list-group-item-info" href="https://music4dance.blog/tag-filtering"><span class="glyphicon glyphicon-question-sign"></span> Help</a>
                 </div>
             </div>
             <div class="modal-footer">
