--- a/m4d/Views/Song/AdvancedSearchForm.cshtml
+++ b/m4d/Views/Song/AdvancedSearchForm.cshtml
@@ -225,7 +225,7 @@
                     @Bonus(1, "Not found in any publisher catalog", filter.Level)
                     @Bonus(2, "Not categorized by dance", filter.Level)
                     <label class="checkbox-inline">
-                        <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/">(Premium Feature)</a>
+                        <a href="https://music4dance.blog/music4dance-help/subscriptions/">(Premium Feature)</a>
                     </label>
                 </div>
             </div>
