--- a/m4d/Views/Song/HolidayMusic.cshtml
+++ b/m4d/Views/Song/HolidayMusic.cshtml
@@ -15,7 +15,7 @@
     <ul>
         <li>Sign up for our @Html.ActionLink("add song beta", "augment") and add holiday songs.</li>
         <li>Browse our catalog of @Html.ActionLink(dance.DanceName, dance.DanceObject.CleanName, "dances") music and <a href="">tag</a> songs as Holiday when you find them.</li>
-        <li>If you have a list of holdiay @dance.DanceName that you are willing to share, please send us email at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or contact us through our <a href="https://www.music4dance.net/blog/feedback/">feedback form.</a></li>
+        <li>If you have a list of holdiay @dance.DanceName that you are willing to share, please send us email at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or contact us through our <a href="https://music4dance.blog/feedback/">feedback form.</a></li>
     </ul>
 }
 
@@ -92,7 +92,7 @@ else
 <div class="row">
     <div class="col-sm-10">
         <p class="big-text">
-            <img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://www.music4dance.net/blog">music4dance blog</a> entries about <a href="https://www.music4dance.net/blog/tag/holiday">Holiday Music</a>.
+            <img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://music4dance.blog">music4dance blog</a> entries about <a href="https://music4dance.blog/tag/holiday">Holiday Music</a>.
         </p>
     </div>
 </div>
