--- a/m4d/Views/Song/NewMusic.cshtml
+++ b/m4d/Views/Song/NewMusic.cshtml
@@ -36,7 +36,7 @@
 
 @SongHelper.SearchFooter(Html, Url, Model, filter, true)
 
-<p class="big-text">If you would like to find recent additions/changes for specific styles of dance (like Swing or Foxtrot): visit the @Html.ActionLink("advanced search page","AdvancedSearchForm") , choose the "Sort By" option of "When Added" or "Last Modified" as well as the Dance style, or styles you would like to see. More information on advanced search is available on the <a href="https://www.music4dance.net/blog/music4dance-help/advanced-search/">advanced search help page</a>.</p>
+<p class="big-text">If you would like to find recent additions/changes for specific styles of dance (like Swing or Foxtrot): visit the @Html.ActionLink("advanced search page","AdvancedSearchForm") , choose the "Sort By" option of "When Added" or "Last Modified" as well as the Dance style, or styles you would like to see. More information on advanced search is available on the <a href="https://music4dance.blog/music4dance-help/advanced-search/">advanced search help page</a>.</p>
 
 @if (User.IsInRole("showDiagnostics") && ViewData.ContainsKey("RawSearch"))
 {
