--- a/m4d/Views/Account/_WhySignUp.cshtml
+++ b/m4d/Views/Account/_WhySignUp.cshtml
@@ -3,11 +3,11 @@
 <h4>@Model.Form you can:</h4>
 <hr/>
 <ul class="list-clean-aligned big-text">
-    <li><span class="glyphicon glyphicon-tags"></span> <a href="https://www.music4dance.net/blog/music4dance-help/tag-editing/">Tag songs</a></li>
-    <li><span class="glyphicon glyphicon-search"></span> <a href="https://www.music4dance.net/blog/music4dance-help/advanced-search/">Search on songs you've tagged</a></li>
-    <li><span class="glyphicon glyphicon-heart"></span> <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">Like and unlike songs</a></li>
-    <li><span class="glyphicon glyphicon-remove"></span> <a href="https://www.music4dance.net/blog/are-there-songs-that-you-never-want-to-dance-to-again/">Hide songs you've "unliked"</a></li>
-    <li><span class="glyphicon glyphicon-file"></span><a href="https://www.music4dance.net/blog/music4dance-help/saved-searches/">Save your searches</a></li>
+    <li><span class="glyphicon glyphicon-tags"></span> <a href="https://music4dance.blog/music4dance-help/tag-editing/">Tag songs</a></li>
+    <li><span class="glyphicon glyphicon-search"></span> <a href="https://music4dance.blog/music4dance-help/advanced-search/">Search on songs you've tagged</a></li>
+    <li><span class="glyphicon glyphicon-heart"></span> <a href="https://music4dance.blog/are-there-songs-that-you-never-want-to-dance-to-again/">Like and unlike songs</a></li>
+    <li><span class="glyphicon glyphicon-remove"></span> <a href="https://music4dance.blog/are-there-songs-that-you-never-want-to-dance-to-again/">Hide songs you've "unliked"</a></li>
+    <li><span class="glyphicon glyphicon-file"></span><a href="https://music4dance.blog/music4dance-help/saved-searches/">Save your searches</a></li>
     @*<li>
         <span class="glyphicon glyphicon-pushpin"></span> Set defaults (coming soon)
         <ul class="list-clean">
