--- a/m4d/Views/Dance/BallroomCompetitionCategories.cshtml
+++ b/m4d/Views/Dance/BallroomCompetitionCategories.cshtml
@@ -28,7 +28,7 @@
     <section id="summary">
         <div class="col-sm-8 big-text col-sm-pull-3 big-text">
             <p>
-                One of the <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">core ideas</a> behind @Html.ActionLink("music4dance", "Index", "Home") is to find interesting music to build playlists for competitions rounds.
+                One of the <a href="https://music4dance.blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">core ideas</a> behind @Html.ActionLink("music4dance", "Index", "Home") is to find interesting music to build playlists for competitions rounds.
                 This page is a central location to start a search for songs for your own playlists based on the tempo definitions of competition ballroom dance established by <a href="http://www.worlddancesport.org/Rule/Athlete/Competition">World Dance Council</a> and <a href="http://ndca.org/education/dances-and-tempi/">National Dance Council of America</a> and our database of songs.
             </p>
             @DanceHelper.BallroomList(Html)
@@ -51,4 +51,4 @@
     @SmartLink.TempiTool()
 </dl>
 
-<p class="big-text"><img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://www.music4dance.net/blog">music4dance blog</a> entries about <a href="https://www.music4dance.net/blog/tag/ballroom">Ballroom</a>.</p>
+<p class="big-text"><img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://music4dance.blog">music4dance blog</a> entries about <a href="https://music4dance.blog/tag/ballroom">Ballroom</a>.</p>
