--- a/m4d/Views/Dance/Details.cshtml
+++ b/m4d/Views/Dance/Details.cshtml
@@ -76,7 +76,7 @@
         }
         @if (!string.IsNullOrWhiteSpace(Model.BlogTag))
         {
-            var blogref = string.Format("https://www.music4dance.net/blog/tag/{0}/", Model.BlogTag);
+            var blogref = string.Format("https://music4dance.blog/tag/{0}/", Model.BlogTag);
             <a href="@blogref" class="list-group-item">Blog</a>
         }
     </div>
