--- a/m4d/Views/Dance/weddingdancemusic.cshtml
+++ b/m4d/Views/Dance/weddingdancemusic.cshtml
@@ -87,10 +87,10 @@
 <div class="row">
     <div class="col-sm-12">
         <p class="big-text">Are you getting married and trying to find the perfect song for your @Html.ActionLink("first dance", "Index", "Song", new { filter = "Index-.-Title-.-.-.-.-.-1-+First Dance:Other" }, null)? Or perhaps you're trying to find the perfect dance style for your favorite song? We can help with both of these as well as helping you find music for @Html.ActionLink("Father/Daughter", "Index", "Song", new { filter = "Index-.-Title-.-.-.-.-.-1-+Father Daughter:Other" }, null) or @Html.ActionLink("Mother/Son", "Index", "Song", new { filter = "Index-.-Title-.-.-.-.-.-1-+Mother Son:Other" }, null) dances.</p>
-        <p class="big-text">If you know the song and you would like help figuring out what dance style to dance to it, try looking it up in our @Html.ActionLink("music catalog", "Index", "Song"). More details on how to do that are available on this <a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">blog post</a>. If we haven't cataloged your song yet, <a href="https://www.music4dance.net/blog/feedback/">let us know</a> and we'll happily add it.</p>
-        <p class="big-text">If you know what dance style you would like to dance, but haven't found the perfect song yet, you can do that kind of search as well. <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">Read the post</a> on how to do that, or just click on one of the quick links below. Each number links to a list of songs that have can be danced to the style specified by the row and have also been tagged with the text in the column heading.</p>
+        <p class="big-text">If you know the song and you would like help figuring out what dance style to dance to it, try looking it up in our @Html.ActionLink("music catalog", "Index", "Song"). More details on how to do that are available on this <a href="https://music4dance.blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">blog post</a>. If we haven't cataloged your song yet, <a href="https://music4dance.blog/feedback/">let us know</a> and we'll happily add it.</p>
+        <p class="big-text">If you know what dance style you would like to dance, but haven't found the perfect song yet, you can do that kind of search as well. <a href="https://music4dance.blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">Read the post</a> on how to do that, or just click on one of the quick links below. Each number links to a list of songs that have can be danced to the style specified by the row and have also been tagged with the text in the column heading.</p>
         <p class="big-text">If you're looking for a slow dance, try browsing the @Html.ActionLink("Castle Foxtrot", "Index", "Song", new { filter = "Index-CFT-Dances-.-.-.-.-.-1-+Wedding:Other" }, null) and @Html.ActionLink("Slow Foxtrot", "Index", "Song", new { filter = "Index-SFT-Dances-.-.-.-.-.-1-+Wedding:Other" }, null) lists, they are full of songs with a good slow and steady beat to do a either a simplified Foxtrot or traditional slow dance.</p>
-        <p class="big-text">Don't forget to @Html.ActionLink("sign up", "SignUp", "Account") (it's free) so you can <a href="https://www.music4dance.net/blog/lets-tag-some-songs/">tag the songs you like</a> and have us remember your favorites while you're playing with options.</p>
+        <p class="big-text">Don't forget to @Html.ActionLink("sign up", "SignUp", "Account") (it's free) so you can <a href="https://music4dance.blog/lets-tag-some-songs/">tag the songs you like</a> and have us remember your favorites while you're playing with options.</p>
     </div>
 </div>
 
@@ -131,7 +131,7 @@
 <div class="row">
     <div class="col-sm-10 col-sm-offset-1">
         <p class="big-text">
-            <img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://www.music4dance.net/blog">music4dance blog</a> entries about <a href="https://www.music4dance.net/blog/tag/wedding">Wedding Music</a>.
+            <img src="~/Content/info.png" alt="tools" width="24" height="24" />Read the <a href="https://music4dance.blog">music4dance blog</a> entries about <a href="https://music4dance.blog/tag/wedding">Wedding Music</a>.
         </p>
     </div>
 </div>
