--- a/m4d/Views/Home/Contribute.cshtml
+++ b/m4d/Views/Home/Contribute.cshtml
@@ -8,7 +8,7 @@
 {
     <h2>Purchase a Subscription</h2>
     <p class="big-text">
-        We appreciate any amount that you're willing to contribute to the music4dance effort. Anyone who contribes ten dollars or more recieves a year of our <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/"></a>premium subscription, which always gives you an ad-free experience.  We will also be experimenting with specific premium features such as <a href="https://www.music4dance.net/blog/music4dance-help/bonus-content/">bonus content.</a>
+        We appreciate any amount that you're willing to contribute to the music4dance effort. Anyone who contribes ten dollars or more recieves a year of our <a href="https://music4dance.blog/music4dance-help/subscriptions/"></a>premium subscription, which always gives you an ad-free experience.  We will also be experimenting with specific premium features such as <a href="https://music4dance.blog/music4dance-help/bonus-content/">bonus content.</a>
     </p>
 
     if (User.Identity.IsAuthenticated)
@@ -43,7 +43,7 @@
          </div>
      }
 
-    <p class="big-text">Any questions about how subscriptions or donations work, how transactions are processed securely or anything else related to this transaction?  Please check out our <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/" target="_blank">help page.</a></p>
+    <p class="big-text">Any questions about how subscriptions or donations work, how transactions are processed securely or anything else related to this transaction?  Please check out our <a href="https://music4dance.blog/music4dance-help/subscriptions/" target="_blank">help page.</a></p>
 
     <h2>Other ways to help</h2>
 
@@ -56,18 +56,18 @@ else
 
 <ul class="big-text">
     <li>Tell your friends!</li>
-    <li>Vote on the <a href="https://www.music4dance.net/blog/music4dance-help/dance-tags/">dancability of songs</a> and <a href="https://www.music4dance.net/blog/music4dance-help/tag-editing/">tag songs</a></li>
+    <li>Vote on the <a href="https://music4dance.blog/music4dance-help/dance-tags/">dancability of songs</a> and <a href="https://music4dance.blog/music4dance-help/tag-editing/">tag songs</a></li>
     <li>Follow music4dance on Spotify<iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:ebo1rk39vp51kkyjps45eobph&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>.
-        <ul><li> You can also <a href="https://www.music4dance.net/blog/playing-songs-from-music4dance/">follow specific playlists</a> on Spotify.</li></ul>
+        <ul><li> You can also <a href="https://music4dance.blog/playing-songs-from-music4dance/">follow specific playlists</a> on Spotify.</li></ul>
     </li>
-    <li>Sign up for our <a href="https://www.music4dance.net/blog/music4dance-help/beta/">beta</a> and <a href="https://www.music4dance.net/blog/music4dance-help/add-songs/">add your own songs</a></li>
+    <li>Sign up for our <a href="https://music4dance.blog/music4dance-help/beta/">beta</a> and <a href="https://music4dance.blog/music4dance-help/add-songs/">add your own songs</a></li>
     <li>Tell your friends or add links to <a href="https://www.music4dance.net">music4dance.net</a> from your own sites</li>
-    <li>Give us <a href="https://www.music4dance.net/blog/feedback/">feedback</a></li>
-    <li><a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/">Purchase music</a> in <a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/itunes/">iTunes</a> or on <a href="https://www.music4dance.net/blog/music4dance-help/playing-or-purchasing-songs/amazon/">Amazon</a> via our referal links.</li>
-    <li>Read the <a href="https://www.music4dance.net/blog/">music4dance blog</a> and:
+    <li>Give us <a href="https://music4dance.blog/feedback/">feedback</a></li>
+    <li><a href="https://music4dance.blog/music4dance-help/playing-or-purchasing-songs/">Purchase music</a> in <a href="https://music4dance.blog/music4dance-help/playing-or-purchasing-songs/itunes/">iTunes</a> or on <a href="https://music4dance.blog/music4dance-help/playing-or-purchasing-songs/amazon/">Amazon</a> via our referal links.</li>
+    <li>Read the <a href="https://music4dance.blog/">music4dance blog</a> and:
         <ul>
             <li>Contribute to the conversation by commenting on a post </li>
-            <li>Or <a href="https://www.music4dance.net/blog/feedback/">contact us</a> if you would like to suggest a topic for a post or are interested in writing a guest post</li>
+            <li>Or <a href="https://music4dance.blog/feedback/">contact us</a> if you would like to suggest a topic for a post or are interested in writing a guest post</li>
         </ul>
 </ul>
 
