--- a/m4d/Views/Home/FAQ.cshtml
+++ b/m4d/Views/Home/FAQ.cshtml
@@ -20,8 +20,8 @@
                     <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                         <div class="panel-body">
                             <p class="neutral">Go to the  <a href="/song/advancedsearchform">Advanced Search</a> available from the "Music" menu and include the style of dance you are interested then click search. The result should be a list of songs that can be danced to that style.</p>
-                            <p class="neutral">If you would like more information check out our related blog posts.  <a href="https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">I’m learning to Cha Cha, where is some great music for practicing?</a> and <a href="https://www.music4dance.net/blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">I am learning the Foxtrot, where can I find some music?</a></p>
-                            <p class="neutral">The <a href="https://www.music4dance.net/blog/music4dance-help/advanced-search/">Advanced Search Documentation</a> describes the different search attributes in more detail.</p>
+                            <p class="neutral">If you would like more information check out our related blog posts.  <a href="https://music4dance.blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/">I’m learning to Cha Cha, where is some great music for practicing?</a> and <a href="https://music4dance.blog/i-am-learning-the-foxtrot-where-can-i-find-some-music/">I am learning the Foxtrot, where can I find some music?</a></p>
+                            <p class="neutral">The <a href="https://music4dance.blog/music4dance-help/advanced-search/">Advanced Search Documentation</a> describes the different search attributes in more detail.</p>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                         <div class="panel-body">
                             <p class="neutral">With the <a href="/home/counter">tempo counter tool</a> you can tap out the beat while listening to a song, and we'll show you a list of styles that can be danced to the beat you just tapped out as well as links to the dance styles' information pages.</p>
                             <p class="neutral">Or if you have a particular song in mind, <a href="/song/advancedsearchform">search</a> for it and if it is in the database look at what styles and tags are associated with it.</p>
-                            <p class="neutral">If you would like more information please read this blog blost <a href="https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">What dance styles can I dance to my favorite song(s)?</a> and the <a href="https://www.music4dance.net/blog/music4dance-help/tempo-counter/">documentation</a> for the Tempo Counter.</p>
+                            <p class="neutral">If you would like more information please read this blog blost <a href="https://music4dance.blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/">What dance styles can I dance to my favorite song(s)?</a> and the <a href="https://music4dance.blog/music4dance-help/tempo-counter/">documentation</a> for the Tempo Counter.</p>
                         </div>
                     </div>
                 </div>
@@ -59,7 +59,7 @@
                     </div>
                     <div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
                         <div class="panel-body">
-                            <p class="neutral">Contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a> and we will try to add it! Feel free to give us any other feedback you might have as well.</p>
+                            <p class="neutral">Contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://music4dance.blog/feedback/">feedback form</a> and we will try to add it! Feel free to give us any other feedback you might have as well.</p>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                                 Go to our <a href="/dances/ballroom-competition-categories">Ballroom competition categories</a> page and see the list of the different
                                 competition categories and the dance/song requirements for several organizations that publish competition rules.
                             </p>
-                            <p class="neutral">If you would like more information check out our related blog post.  <a href="https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">I'm a competition ballroom dancer, can I find practice songs that are a specific tempo?</a></p>
+                            <p class="neutral">If you would like more information check out our related blog post.  <a href="https://music4dance.blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/">I'm a competition ballroom dancer, can I find practice songs that are a specific tempo?</a></p>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                                 Check out the <a href="/dances/wedding-music">wedding page</a> for information to help you get started,
                                 or you can go to the <a href="/song/advancedsearchform">advanced search</a> page and look for songs that are tagged as First Dance and/or Wedding.
                             </p>
-                            <p class="neutral">If you would like more information check out our related blog posts.  <a href="https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">Wedding Music Part I: Can we dance the Foxtrot to our song?</a> and <a href="https://www.music4dance.net/blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</a></p>
+                            <p class="neutral">If you would like more information check out our related blog posts.  <a href="https://music4dance.blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/">Wedding Music Part I: Can we dance the Foxtrot to our song?</a> and <a href="https://music4dance.blog/wedding-music-part-ii-were-learning-to-rumba-help-us-find-a-good-song-for-our-first-dance/">Wedding Music Part II: We’re learning to Rumba, help us find a good song for our first dance</a></p>
                         </div>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     </div>
                     <div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
                         <div class="panel-body">
-                            <p class="neutral">If you are not finding the answer to your question here or wish to give us feedback on any part of the site please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a>. </p>
+                            <p class="neutral">If you are not finding the answer to your question here or wish to give us feedback on any part of the site please contact us at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://music4dance.blog/feedback/">feedback form</a>. </p>
                         </div>
                     </div>
                 </div>
