--- a/m4d/Views/Home/Index.cshtml
+++ b/m4d/Views/Home/Index.cshtml
@@ -86,7 +86,7 @@
         }
         <div class="item fun-image row">
             <div class="col-md-4 col-md-offset-2 col-xs-8 col-xs-offset-2">
-                <div class="dance-title"><a href="https://www.music4dance.net/blog/">Fun with Music for All Kinds of Dancers</a></div>
+                <div class="dance-title"><a href="https://music4dance.blog/">Fun with Music for All Kinds of Dancers</a></div>
                 <ul class="dance-list">
                     @foreach (var entry in headEntries)
                     {
@@ -159,26 +159,26 @@
     <iframe src="https://open.spotify.com/follow/1/?uri=spotify:user:ebo1rk39vp51kkyjps45eobph&size=basic&theme=light" width="200" height="25" scrolling="no" frameborder="0" style="border:none; overflow:hidden;" allowtransparency="true"></iframe>
     <dl class="big-text">
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs to dance a specific dance style.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dance") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-styles-help/") @SmartLink.Posts("https://www.music4dance.net/blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dance") @SmartLink.Docs("https://music4dance.blog/music4dance-help/dance-styles-help/") @SmartLink.Posts("https://music4dance.blog/question-1-im-learning-to-cha-cha-where-is-some-great-music-for-practicing/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find the most recently added songs.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song/newmusic?type=Created") @SmartLink.Posts("https://www.music4dance.net/blog/tag/new-music/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song/newmusic?type=Created") @SmartLink.Posts("https://music4dance.blog/tag/new-music/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find out what dance styles can be danced to a song.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/song-list/") @SmartLink.Posts("https://www.music4dance.net/blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/song") @SmartLink.Docs("https://music4dance.blog/music4dance-help/song-list/") @SmartLink.Posts("https://music4dance.blog/wedding-music-part-i-can-we-dance-the-foxtrot-to-our-song/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Start with a musical genre (or other tags) and find songs to dance a particular style.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/tag") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/tag/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/tag") @SmartLink.Docs("https://music4dance.blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://music4dance.blog/tag/tag/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find wedding songs and match them with dance styles.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/wedding-music") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/wedding/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/wedding-music") @SmartLink.Docs("https://music4dance.blog/music4dance-help/tag-cloud/") @SmartLink.Posts("https://music4dance.blog/tag/wedding/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find songs that match competion tempo ranges.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/ballroom-competition-categories") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-category/") @SmartLink.Posts("https://www.music4dance.net/blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/ballroom-competition-categories") @SmartLink.Docs("https://music4dance.blog/music4dance-help/dance-category/") @SmartLink.Posts("https://music4dance.blog/im-a-competition-ballroom-dancer-can-i-find-practice-songs-that-are-a-specific-tempo/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Vote on what style you would dance to any song in our catalog.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/signup") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/dance-tags/") @SmartLink.Posts("https://www.music4dance.net/blog/tag/vote/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/signup") @SmartLink.Docs("https://music4dance.blog/music4dance-help/dance-tags/") @SmartLink.Posts("https://music4dance.blog/tag/vote/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Tag songs to create your own ways of making song lists</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/signup") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tag-editing/") @SmartLink.Posts("https://www.music4dance.net/blog/lets-tag-some-songs/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/account/signup") @SmartLink.Docs("https://music4dance.blog/music4dance-help/tag-editing/") @SmartLink.Posts("https://music4dance.blog/lets-tag-some-songs/")</dd>
         <dt><img src="~/Content/music.png" alt="music" width="24" height="24" />Find holiday music to dance to.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/holiday-music") @SmartLink.Posts("https://www.music4dance.net/blog/tag/holiday/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/dances/holiday-music") @SmartLink.Posts("https://music4dance.blog/tag/holiday/")</dd>
     </dl>
-    <p>Don't see your style of dance here? <a href="https://www.music4dance.net/blog/feedback/">Let us know</a> and we'll be happy to expand our catalog.</p>
-    <p>Do you use a different streaming provider or purchase your music from a different source? <a href="https://www.music4dance.net/blog/feedback/">Tell us about it</a> and we'll take a look into expanding our support.</p>
+    <p>Don't see your style of dance here? <a href="https://music4dance.blog/feedback/">Let us know</a> and we'll be happy to expand our catalog.</p>
+    <p>Do you use a different streaming provider or purchase your music from a different source? <a href="https://music4dance.blog/feedback/">Tell us about it</a> and we'll take a look into expanding our support.</p>
 </div>
 
 <div class="row col-xs-12"><hr /></div>
@@ -187,11 +187,11 @@
     <h2 class="tools"><img src="~/Content/tools.png" alt="music" width="48" height="48"/>Tools</h2>
     <dl class="big-text">
         <dt class="tools"><img src="~/Content/tools.png" alt="tools" width="24" height="24"/>Use our tempo counter tool to find the tempo of a song and match it to dance styles.</dt>
-        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/counter") @SmartLink.Docs("https://www.music4dance.net/blog/music4dance-help/tempo-counter/") @SmartLink.Posts("https://www.music4dance.net/blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/")</dd>
+        <dd style="margin-left: 4em">@SmartLink.TryIt("https://www.music4dance.net/home/counter") @SmartLink.Docs("https://music4dance.blog/music4dance-help/tempo-counter/") @SmartLink.Posts("https://music4dance.blog/question-2-what-dance-styles-can-i-dance-to-my-favorite-songs/")</dd>
         @SmartLink.TempiTool()
     </dl>
     <p class="neutral">
-        We have more useful tools for dancers coming soon. <a href="https://www.music4dance.net/blog/feedback/">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
+        We have more useful tools for dancers coming soon. <a href="https://music4dance.blog/feedback/">Let us know</a> if you have an idea for a tool that could help match music to dances or otherwise help dancers find music.
     </p>
 </div>
 
@@ -199,7 +199,7 @@
 
 <div id="info" class="row col-md-12">
     <h2 class="blog"><img src="~/Content/info.png" alt="music" width="48" height="48" />Info</h2>
-    <p class="neutral">Are you looking for more information on how music relates to dance? Then please follow our <a href="https://www.music4dance.net/blog">blog</a>.</p>
+    <p class="neutral">Are you looking for more information on how music relates to dance? Then please follow our <a href="https://music4dance.blog">blog</a>.</p>
     @foreach (var blog in blogEntries)
     {
         <h4 class="blog">@blog.Title</h4>
