--- a/m4d/Views/Home/Purchase.cshtml
+++ b/m4d/Views/Home/Purchase.cshtml
@@ -36,5 +36,5 @@ else
     </script>
 }
 
-<p class="big-text">Any questions about how subscriptions or donations work, how transactions are processed securely or anything else related to this transaction?  Please check out our <a href="https://www.music4dance.net/blog/music4dance-help/subscriptions/" target="_blank">help page.</a></p>
+<p class="big-text">Any questions about how subscriptions or donations work, how transactions are processed securely or anything else related to this transaction?  Please check out our <a href="https://music4dance.blog/music4dance-help/subscriptions/" target="_blank">help page.</a></p>
 
