--- a/m4d/Views/Shared/_TagEditor.cshtml
+++ b/m4d/Views/Shared/_TagEditor.cshtml
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <a class="btn btn-default" data-bind="attr: {href:'https://www.music4dance.net/blog/music4dance-help/' + tagSuggestions().help() + '/'}" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
+                <a class="btn btn-default" data-bind="attr: {href:'https://music4dance.blog/music4dance-help/' + tagSuggestions().help() + '/'}" target="_blank"><span class="glyphicon glyphicon-question-sign"></span></a>
                 <button id="addTagsOkay" type="button" class="btn btn-default" data-dismiss="modal" data-bind="text:tagSuggestions().current().title"></button>
             </div>
         </div>
