--- a/m4d/Views/Song/Album.cshtml
+++ b/m4d/Views/Song/Album.cshtml
@@ -23,7 +23,7 @@
     }
     else
     {
-        <p class="big-text">We don't have any songs from this album that have been associated with a dance style.  Please let us know if you have a list that includes songs from this album and associated dance styles and we'll be happy to add them.  We can be contacted via email at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://www.music4dance.net/blog/feedback/">feedback form.</a></p>
+        <p class="big-text">We don't have any songs from this album that have been associated with a dance style.  Please let us know if you have a list that includes songs from this album and associated dance styles and we'll be happy to add them.  We can be contacted via email at <a href="mailto:info@music4dance.net">info@music4dance.net</a> or through our <a href="https://music4dance.blog/feedback/">feedback form.</a></p>
     }
 </div>
 
