--- a/m4d/Views/Song/Augment.cshtml
+++ b/m4d/Views/Song/Augment.cshtml
@@ -58,7 +58,7 @@
     <p class="big-text">
         Each source of music has a different way of identifying songs, in general you can copy whatever sharing link they provide and paste it into the box above.
         Below are some samples of the recognized formats of each type.
-        More help is availble <a href="https://www.music4dance.net/blog/adding-songs-beta/">here</a>.
+        More help is availble <a href="https://music4dance.blog/adding-songs-beta/">here</a>.
     </p>
     <H3>Amazon</H3>
     <ul>
@@ -83,8 +83,8 @@ else
 {
     <p>Adding songs is a by invitation beta feature.  If you are interested in adding songs please do the following:</p>
     <ul>
-        <li><a href="https://www.music4dance.net/account/signup">Create and account</a>  (<a href="https://www.music4dance.net/blog/music4dance-help/account-management/">Account Management Help</a>).</li>
-        <li>Send email to <a href="mailto:david@music4dance.net">info@music4dance.net</a> or fill out our <a href="https://www.music4dance.net/blog/feedback/">feedback form</a> and ask to participate in the adding songs beta.</li>
+        <li><a href="https://www.music4dance.net/account/signup">Create and account</a>  (<a href="https://music4dance.blog/music4dance-help/account-management/">Account Management Help</a>).</li>
+        <li>Send email to <a href="mailto:david@music4dance.net">info@music4dance.net</a> or fill out our <a href="https://music4dance.blog/feedback/">feedback form</a> and ask to participate in the adding songs beta.</li>
     </ul>
     <p>If you've already signed up for the beta and are <a href="https://www.music4dance.net/account/signin">signed in</a> but still seeing this message, we are still evaluting your request, please be patient.</p>
 }
