--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -63,6 +63,8 @@ else
     <div class="row">
         <div class="col-md-12">
             <b>Raw Search: </b>@WebUtility.UrlDecode(ViewBag.RawSearch.ToString())<br />
+            <b>Raw Search Filter: </b>@WebUtility.UrlDecode(ViewBag.RawSearch.Filter.ToString())<br />
+            <b>Raw Search OrderBy: </b>@WebUtility.UrlDecode(string.Join(",",ViewBag.RawSearch.OrderBy))<br />
         </div>
     </div>
     <div class="row">
